--- a/resources/assets/sass/_base.scss
+++ b/resources/assets/sass/_base.scss
@@ -116,6 +116,7 @@ html, body {
         height: 100%;
         overflow: hidden;
         width: 100%;
+        max-height: rem(300px);
         img {
           width: 100%;
           height: 100%;
