--- a/resources/assets/sass/_constants.scss
+++ b/resources/assets/sass/_constants.scss
@@ -2,5 +2,10 @@
   @include border-radius(#{rem(2px)});
 }
 %box-shadow {
-  @include box-shadow(#{rem(0px)}, #{rem(0px)}, #{rem(10px)}, rgba($black,0.15));
+  @include box-shadow(#{rem(1px)}, #{rem(1px)}, #{rem(2px)}, rgba($black,0.15));
+}
+
+%boxLook {
+  @extend %border-radius;
+  @extend %box-shadow;
 }
