--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -56,4 +56,9 @@
 @import "base";
 
 //Landingpage
-@import "landingpage/content";
+body {
+  &.landingpage {
+    background: $black;
+    @import "landingpage/content";
+  }
+}
