--- a/resources/assets/sass/landingpage/_content.scss
+++ b/resources/assets/sass/landingpage/_content.scss
@@ -1,15 +1,43 @@
-body {
-  &.landingpage {
-    background: $black;
-    .hero {
-      width: 100vw;
-      height: 100vh;
-      background-image: url('../images/slider.png');
-      background-size: cover;
-      background-position: center center;
-      background-repeat: no-repeat;
-      background-attachment: fixed;
+.hero {
+  width: 100vw;
+  height: 100vh;
+  background-image: url('../images/slider.png');
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  color: white;
+  text-align: center;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  .btn {
+    width: 200px;
+    color: orange;
+    text-decoration: none;
+    font-size: 1.5em;
+    border: 3px solid orange;
+    margin-top: 50px;
 
-    }
+
   }
+}
+
+.About {
+  width: 100vw;
+  height: 100vh;
+  color: white;
+}
+
+.row {
+margin-top: 300px;
+
+}
+
+.img-fluid {
+margin-left: 30px;
+}
+
+.col-6 {
+
 }
