--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16481,4 +16481,38 @@ body.landingpage .hero {
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  color: white;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body.landingpage .hero .btn {
+  width: 200px;
+  color: orange;
+  text-decoration: none;
+  font-size: 1.5em;
+  border: 3px solid orange;
+  margin-top: 50px;
+}
+
+body.landingpage .About {
+  width: 100vw;
+  height: 100vh;
+  color: white;
+}
+
+body.landingpage .row {
+  margin-top: 300px;
+}
+
+body.landingpage .img-fluid {
+  margin-left: 30px;
 }
